@@ -284,7 +284,7 @@
 					<td class="ui-widget-content width5"><img src="images/icons/puce.png" alt="<{$topic.topic_title}>" /><{$topic.topic_id}></td>
 					<td class="ui-widget-content"><a title="<{$topic.topic_title}>" href="index.php?topic=<{$topic.topic_id}>"><{$topic.topic_title}></a></td>
 					<td class="ui-widget-content"><{$topic.topic_desc}></td>
-					<td class="ui-widget-content"><img src="<{$topic.imgurl}>" alt="<{$topic.topic_title}>" /></td>
+					<{if $topic.topic_img}><td class="ui-widget-content"><img src="<{$topic.imgurl}>" alt="<{$topic.topic_title}>" /></td><{/if}>
 				</tr>
 				<{/foreach}>
 			</tbody>
